# D4-ticket-AI

./: .env.example  .gitignore  Dockerfile.railway  PROJECT_REQUIREMENTS.md  README.md  docker-compose.yml  railway.json  seed_data.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/versions/: b2c3d4e5f6a7_update_embedding_dim_768_to_3072.py
backend/app/: main.py
backend/app/ai/: agent.py  checkpoint.py  router.py  tools.py
backend/app/api/v1/: attachments.py  auth.py  comments.py  knowledge.py  notifications.py  tickets.py  users.py  ws.py
backend/app/core/: config.py  websocket_manager.py
backend/app/db/: session.py
backend/app/models/: __init__.py  comment.py  knowledge_chunk.py  notification.py  ticket.py  user.py
backend/app/schemas/: comment.py  notification.py  ticket.py  websocket.py
backend/app/services/: ai_copilot_service.py  attachment_service.py  cache_service.py  comment_service.py  embedding_service.py  knowledge_service.py  notification_service.py  pubsub_service.py  scraping_service.py  ticket_service.py
backend/tests/: conftest.py  test_ai_tools.py  test_attachments.py  test_auth.py  test_comments.py  test_notifications.py  test_security.py  test_tickets.py  test_users.py
docs/: AUDIT.md  AUDIT_REPORT.md  DEPLOYMENT.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-toast.ts  useNotifications.ts  useTickets.ts  useWebSocket.ts
frontend/src/lib/: api.ts  (+1 more)
(+18 files in other folders)
